--- a/src/Components/Projects/css/projects.css
+++ b/src/Components/Projects/css/projects.css
@@ -84,11 +84,20 @@
     and (min-width: 390px) 
     and (max-width: 844px){
         .Projects-section {
-            background: none;
-            background-color: green;
+            background: radial-gradient(ellipse at top, #020202 0%, #6d36d3 100%);
+            height: 190vh;
         }
 
         .Card {
             margin-left: 68px;
+        }
+
+        .Projects-row1 {
+            display: inline-block;
+            margin-left: -35px;
+        }
+
+        #Card1-header {
+            font-size: 24px;
         }
     } 
