--- a/src/Components/Home/css/home.css
+++ b/src/Components/Home/css/home.css
@@ -79,6 +79,22 @@
     and (min-width: 393px) 
     and (max-width: 852px){ 
 
-      
+      .Home-section {
+        background-color: yellow;
+      }
 
     }
+
+
+@media screen and (min-width: 428px) and (max-width: 926px) {
+  .Home-section {
+    background-color: red;
+  }
+}
+
+
+@media screen and (min-width: 430px) and (max-width: 926px) {
+  .Home-section {
+    background-color: blue;
+  }
+}
