--- a/src/Components/Footer/css/footer.css
+++ b/src/Components/Footer/css/footer.css
@@ -35,3 +35,11 @@
         }
 
     }
+
+
+/* Media Query - Desktop */
+@media screen and (min-width: 1920px)  {
+        .Footer-links {
+            margin-left: 835px;
+        }
+}
